# py-git-analyzer

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_git_analyzer/: __init__.py
tests/: test_import.py  test_top.py
