[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-git-analyzer"
version = "0.1.7"
description = "Git repository statistics and commit analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["git", "analytics", "repository", "statistics", "commits"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-git-analyzer#readme"
Repository = "https://github.com/philiprehberger/py-git-analyzer"
Issues = "https://github.com/philiprehberger/py-git-analyzer/issues"
Changelog = "https://github.com/philiprehberger/py-git-analyzer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_git_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
