[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-git-analyzer"
version = "0.1.4"
description = "Git repository statistics and commit analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-git-analyzer#readme"
Repository = "https://github.com/philiprehberger/py-git-analyzer"
Issues = "https://github.com/philiprehberger/py-git-analyzer/issues"
Changelog = "https://github.com/philiprehberger/py-git-analyzer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_git_analyzer"]
